; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ixgbevf/extr_ixgbevf_main.c_map_vector_to_txq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ixgbevf/extr_ixgbevf_main.c_map_vector_to_txq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ixgbevf_adapter = type { %struct.TYPE_4__*, %struct.ixgbevf_q_vector** }
%struct.TYPE_4__ = type { %struct.TYPE_4__* }
%struct.ixgbevf_q_vector = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, %struct.TYPE_4__* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ixgbevf_adapter*, i32, i32)* @map_vector_to_txq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @map_vector_to_txq(%struct.ixgbevf_adapter* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.ixgbevf_adapter*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.ixgbevf_q_vector*, align 8
  store %struct.ixgbevf_adapter* %0, %struct.ixgbevf_adapter** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.ixgbevf_adapter*, %struct.ixgbevf_adapter** %4, align 8
  %9 = getelementptr inbounds %struct.ixgbevf_adapter, %struct.ixgbevf_adapter* %8, i32 0, i32 1
  %10 = load %struct.ixgbevf_q_vector**, %struct.ixgbevf_q_vector*** %9, align 8
  %11 = load i32, i32* %5, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct.ixgbevf_q_vector*, %struct.ixgbevf_q_vector** %10, i64 %12
  %14 = load %struct.ixgbevf_q_vector*, %struct.ixgbevf_q_vector** %13, align 8
  store %struct.ixgbevf_q_vector* %14, %struct.ixgbevf_q_vector** %7, align 8
  %15 = load %struct.ixgbevf_q_vector*, %struct.ixgbevf_q_vector** %7, align 8
  %16 = getelementptr inbounds %struct.ixgbevf_q_vector, %struct.ixgbevf_q_vector* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 1
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %19 = load %struct.ixgbevf_adapter*, %struct.ixgbevf_adapter** %4, align 8
  %20 = getelementptr inbounds %struct.ixgbevf_adapter, %struct.ixgbevf_adapter* %19, i32 0, i32 0
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %20, align 8
  %22 = load i32, i32* %6, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i64 %23
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  store %struct.TYPE_4__* %18, %struct.TYPE_4__** %25, align 8
  %26 = load %struct.ixgbevf_adapter*, %struct.ixgbevf_adapter** %4, align 8
  %27 = getelementptr inbounds %struct.ixgbevf_adapter, %struct.ixgbevf_adapter* %26, i32 0, i32 0
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %27, align 8
  %29 = load i32, i32* %6, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i64 %30
  %32 = load %struct.ixgbevf_q_vector*, %struct.ixgbevf_q_vector** %7, align 8
  %33 = getelementptr inbounds %struct.ixgbevf_q_vector, %struct.ixgbevf_q_vector* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 1
  store %struct.TYPE_4__* %31, %struct.TYPE_4__** %34, align 8
  %35 = load %struct.ixgbevf_q_vector*, %struct.ixgbevf_q_vector** %7, align 8
  %36 = getelementptr inbounds %struct.ixgbevf_q_vector, %struct.ixgbevf_q_vector* %35, i32 0, i32 0
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 8
  %39 = add nsw i32 %38, 1
  store i32 %39, i32* %37, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
